@@ -47,7 +47,16 @@ public class ReviewController {
         List<Review> reviews = reviewRepository.findByVehicleId(vehicleId);
         List<ReviewResponseDto> dtos = reviews.stream()
                 .map(r -> new ReviewResponseDto(r.getReviewId(), r.getReservation().getReservationId(), r.getRating(), r.getComments(), r.getCreatedAt()))
-                .collect(Collectors.toList());
+                .toList();
+        return ResponseEntity.ok(dtos);
+    }
+
+    @GetMapping("/top")
+    public ResponseEntity<List<ReviewResponseDto>> getTopReviews() {
+        List<Review> reviews = reviewRepository.findByRatingGreaterThan(3);
+        List<ReviewResponseDto> dtos = reviews.stream()
+                .map(r -> new ReviewResponseDto(r.getReviewId(), r.getReservation().getReservationId(), r.getRating(), r.getComments(), r.getCreatedAt()))
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 }
